--- a/scdf/cloud.properties
+++ b/scdf/cloud.properties
@@ -1,3 +1,3 @@
 server.port=9000
 debug=true
-spring.cloud.dataflow.features.streams-enabled=false
+spring.cloud.dataflow.features.streamsEnabled=false
