--- a/scdf-server-cloud.properties
+++ b/scdf-server-cloud.properties
@@ -1,1 +1,3 @@
-debug=true
+logging.level.org.springframework.cloud.stream=DEBUG
+logging.level.org.springframework.cloud.dataflow=DEBUG
+logging.level.org.springframework.cloud.deployer=DEBUG
