--- a/scdf-server-cloud.properties
+++ b/scdf-server-cloud.properties
@@ -1,3 +1,1 @@
-logging.level.org.springframework.cloud.stream=DEBUG
-logging.level.org.springframework.cloud.dataflow=DEBUG
-logging.level.org.springframework.cloud.deployer=DEBUG
+spring.cloud.dataflow.features.streams-enabled=false
